--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.1",
     "store": "^2.0.12",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
