--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "bootstrap": "^3.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
+    "element-ui": "^2.13.0",
     "normalize.css": "^8.0.1",
     "store": "^2.0.12",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
