--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
+    "vue2-animate": "^2.1.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
