--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "better-scroll": "^1.15.2",
     "bootstrap": "^3.4.1",
     "bootstrap-vue": "^2.1.0",
@@ -21,7 +21,8 @@
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vue2-animate": "^2.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
