--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
     "bootstrap": "^3.4.1",
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
+    "cors": "^2.8.5",
     "element-ui": "^2.13.0",
     "normalize.css": "^8.0.1",
     "store": "^2.0.12",
