--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "any-touch": "^0.7.2",
     "axios": "^0.18.0",
     "better-scroll": "^1.15.2",
     "bootstrap": "^3.4.1",
@@ -21,6 +22,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
+    "vue-touch": "^2.0.0-beta.4",
     "vue2-animate": "^2.1.3",
     "vuex": "^3.1.2",
     "vuex-persistedstate": "^3.0.1"
